<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/teal_700"
        android:layout_height="60dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:text="About"
            android:id="@+id/filesTv"
            android:fontFamily="@font/montserrat_light"
            android:textStyle="bold"
            android:layout_marginLeft="15dp" />


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:id="@+id/backIv"
            android:background="@drawable/ic_back"
            android:layout_marginLeft="15dp"
            android:layout_alignParentRight="false" />




    </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/extraView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="#a9a9a9"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="8dp"
                    card_view:cardMaxElevation="50dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/lock"
                        android:layout_gravity="center"/>


                </androidx.cardview.widget.CardView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:text="ID LOCKER"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat_light"
                    android:textStyle="bold"/>



                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="Information about application"
                    android:layout_marginTop="25dp"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/info1"
                    android:layout_marginTop="25dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/info2"
                    android:layout_marginTop="25dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/info3"
                    android:layout_marginTop="25dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/info4"
                    android:layout_marginTop="25dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/info5"
                    android:layout_marginTop="25dp"/>




            </LinearLayout>

        </androidx.core.widget.NestedScrollView>







    </LinearLayout>

</RelativeLayout>