<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="8dp"
        card_view:cardMaxElevation="50dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/extraView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="#a9a9a9"
                    card_view:cardBackgroundColor="#fff"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="8dp"
                    card_view:cardMaxElevation="50dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/lock"
                        android:layout_gravity="center"/>


                </androidx.cardview.widget.CardView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:background="@color/teal_700"
                    android:text="ID LOCKER"
                    android:textSize="16sp"
                    android:fontFamily="@font/muli_bold"
                    android:textStyle="bold"/>



                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:text="How to login into the application"
                    android:layout_marginTop="25dp"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/login1"
                    android:layout_marginTop="20dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/login2"
                    android:layout_marginTop="20dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:textSize="14sp"
                    android:textColor="@color/teal_700"
                    android:text="@string/login3"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="20dp"/>




            </LinearLayout>




    </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>